Modal implementation and Footer spacing issues fixes

--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -6,6 +6,7 @@
 body {
  background: $background-color;
  color: $font-color-primary;
+ height: 100vh;
 }
 
 main {
