--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -49,3 +49,70 @@
     fill-opacity: 1;
     transform: rotate(360deg);  
 }
+
+//===============================================================================================================//
+//=============================================MODAL=============================================================//
+//===============================================================================================================//
+
+.settings-modal{
+    color: black;
+}
+
+//===================================Settings Toggle Switch==========================//
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: $font-color-secondary;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 34px;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: $primary-color;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px $primary-color;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  .slider.round {
+    border-radius: 34px;
+  }
