--- a/src/styles/_nic-cage-page.scss
+++ b/src/styles/_nic-cage-page.scss
@@ -1,4 +1,10 @@
+.cage-title{
+    margin-top: 7rem;
+}
+
+
 .cage-results{
+    padding-top: 5rem;
     display: flex;
     flex-wrap: wrap;
 }
