--- a/src/styles/_wrapper.scss
+++ b/src/styles/_wrapper.scss
@@ -1,3 +1,5 @@
 .wrapper{
     overflow: hidden;
+    background-color: black;
+    height: 100vh;
 }
